feat: [CI-5823]: Removed Yaml Version