@@ -13,8 +13,8 @@ import io.harness.pms.plan.creation.PlanCreatorUtils;
 import io.harness.pms.sdk.core.plan.PlanNode;
 import io.harness.pms.sdk.core.plan.creation.beans.PlanCreationContext;
 import io.harness.pms.sdk.core.plan.creation.beans.PlanCreationResponse;
+import io.harness.pms.yaml.PipelineVersion;
 import io.harness.pms.yaml.YAMLFieldNameConstants;
-import io.harness.pms.yaml.YamlVersion;
 
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -47,7 +47,7 @@ public class DummyChildrenPlanCreatorV2 extends ChildrenPlanCreator<DummyChildre
   }
 
   @Override
-  public Set<YamlVersion> getSupportedYamlVersions() {
-    return Collections.emptySet();
+  public Set<String> getSupportedYamlVersions() {
+    return Set.of(PipelineVersion.V0);
   }
 }
